- Successful viewer startup resets the startup-failure counter to `0`.
- When startup fails but threshold disable has not been reached, wrapper diagnostics now include `reportViewerStartupFailures=<count>` for deterministic triage.
- Shell doctor output now includes `ReportViewerStartFailCount` so operator triage can confirm current startup-failure state.
- Evidence typing added to operator reports (additive, non-breaking):
- `report_card.txt` now includes an evidence legend and claim mapping lines:
- `EVIDENCE TAGS: ...`
- `evidence.classification=[INF]`
- `evidence.observed=[OBS]`
- `evidence.posture=[POL]`
- `evidence.privacyLint=[SYS]`
- `evidence.buildDigest=[SYS]`
- `report_card_v0.json` now includes additive `evidence` metadata (`legend` and `claims`) aligned with the text report.
- `compare_report.txt` now includes additive evidence legend/claim mapping lines (including `verdict=[POL]`, `buckets=[INF]`, `artifactDigest=[OBS]`).
- Contracts updated to pin this behavior (`report_card_contract` and `compare_cli_smoke`).
- Additional output finalize hardening (current unreleased batch):
- Compare text artifacts now use per-file stage/finalize writes within staged out-root finalize.
- Ticket-pack text artifacts now use per-file stage/finalize writes within `ticket_pack.stage` finalize flow.
- `safe-run`, `run`, and `examine` text artifact writers now use per-file stage/finalize writes.
- `email unpack` export text artifacts and attachment file writes now use per-file stage/finalize writes.
- `intake` staged outputs now write per-file stage/finalize before out-root finalize.
- `container scan` staged artifacts (`safe_run_receipt.json`, README, capability/adapter analysis JSON) now use per-file stage/finalize writes.
- Host update staging now writes `host_self_manifest.json` with per-file stage/finalize semantics before host-root swap.
- Added compare/ticket-pack regression assertions that fail on any finalized-output `*.stage` file residue.