@@ -10,6 +10,7 @@ Included
 - Successful viewer startup resets the startup-failure counter to `0`.
 - When startup fails but threshold disable has not been reached, wrapper diagnostics now include `reportViewerStartupFailures=<count>` for deterministic triage.
 - Shell doctor output now includes `ReportViewerStartFailCount` so operator triage can confirm current startup-failure state.
+- Launchpad History successful report open now resets viewer startup state (`UseReportViewer=1`, `ReportViewerAutoOpen=1`, `ReportViewerStartFailCount=0`) so manual viewer opens self-heal auto-open disable state.
 - Evidence typing added to operator reports (additive, non-breaking):
 - `report_card.txt` now includes an evidence legend and claim mapping lines:
 - `EVIDENCE TAGS: ...`
